--- a/GoogleSearch.html
+++ b/GoogleSearch.html
@@ -11,8 +11,12 @@
 	   	<img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
 	   	<input id="search-bar"></input>
 	   	<div id="search-btns">
-	   		<button class="btn-search">Google Search</button>
-	   		<button class="btn-search">I'm Feeling Lucky</button>
+        <div id=GoogleSearchButton>
+	   		  <button>Google Search</button>
+        </div>
+        <div id="FeelingLuckyButton">
+	   		  <button>I'm Feeling Lucky</button>
+        </div>
 	   	</div>
 	   </div>
    </div>
