Sorted button layout, and added header

--- a/GoogleSearch.html
+++ b/GoogleSearch.html
@@ -7,19 +7,27 @@
   </head>
    <body>
    <div id="container">
-   	   <div id="ctr-el">
-	   	<img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
-	   	<input id="search-bar"></input>
-	   	<div id="search-btns">
-        <div id=GoogleSearchButton>
-	   		  <button>Google Search</button>
-        </div>
-        <div id="FeelingLuckyButton">
-	   		  <button>I'm Feeling Lucky</button>
-        </div>
-	   	</div>
-	   </div>
-   </div>
+    <div id="header">
+    <div id="header-elements">
+    <p>Gmail</p>
+    <p>Images</p>
+    <img id="square-icon" src="images\options.png">
+    <button>Sign In</button>
+    </div>
+    </div>
+       <div id="ctr-el">
+      <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+      <input id="search-bar"></input>
+          <div id="search-btns">
+             <div id=GoogleSearchButton>
+              <button>Google Search</button>
+             </div>
+             <div id="FeelingLuckyButton">
+              <button>I'm Feeling Lucky</button>
+             </div>
+      </div>
+      </div>
+     </div>
   <script type="text/javascript" src="script.js"></script>
   </body>
  </html>
