--- a/GoogleSearch.html
+++ b/GoogleSearch.html
@@ -4,6 +4,7 @@
      <meta charset="UTF-8">
     <title>Google</title>
     <link rel="stylesheet" href="stylesheet.css" type="text/css">
+    <link rel="icon" type="image/png" href="images\favicon.png" sizes="16x16">
   </head>
    <body>
    <div id="container">
@@ -41,7 +42,6 @@
             <p>Privacy</p>
             <p>Terms</p>
             <p>Settings</p>
-            <p>Use Google.com</p>
           </div>
         </div>
     </div>
@@ -49,4 +49,5 @@
   <script type="text/javascript" src="script.js"></script>
   </body>
  </html>
+
 
